Document build options and engine runtime notes in README